[gd_scene load_steps=5 format=3 uid="uid://daphvep6eb4ua"]

[ext_resource type="Script" uid="uid://dd6v0fqipsirt" path="res://enemies/test_enemy/test_enemy.gd" id="1_2bghh"]
[ext_resource type="PackedScene" uid="uid://hvicyqyeyndq" path="res://enemies/models/EnemyMedium.glb" id="1_lcl3f"]
[ext_resource type="AudioStream" uid="uid://cqnpeqly87s45" path="res://enemies/test_enemy/hit.mp3" id="3_8ifd5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2bghh"]
radius = 0.541015

[node name="TestEnemy" type="CharacterBody3D"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
script = ExtResource("1_2bghh")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("1_lcl3f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Hurtbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117732, 1, 0)
shape = SubResource("CapsuleShape3D_2bghh")

[node name="HurtboxCooldownTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HurtSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8ifd5")
playback_type = 1

[node name="DieTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="HurtboxCooldownTimer" to="." method="enable_hurtbox"]
[connection signal="timeout" from="DieTimer" to="." method="die"]
